# ProblemSolving

./: .gitignore  README.md  build.gradle.kts
app/: build.gradle.kts
app/assets/: script.js
app/docs/mohamed.arfa.problemsolving/: index.md
app/docs/mohamed.arfa.problemsolving/-swapping-nodes-in-a-linked-list/: index.md  start.md  swap-nodes.md
app/src/main/: AndroidManifest.xml
app/src/main/assets/web/problem-solving/: index.html  package-lock.json  package.json
app/src/main/cpp/: CMakeLists.txt  connection.cpp  connection.h  helper.h  main.cpp  native-lib.cpp  problems.h
app/src/main/cpp/easy/ConcatenationOfArray/: ConcatenationOfArray.cpp
app/src/main/cpp/easy/SmallerNumberThanCurrent/: SmallerNumbersThanCurrent.cpp
app/src/main/res/values/: strings.xml
app/src/test/java/Datastructure/LinkedList/: MainLinkedList.java
app/src/test/java/complextiyReports/: ComplexityAnalysisExtension.kt  ComplexityAnalyzer.kt  ComplexityModels.kt  ComplexityReports.kt
app/src/test/java/easy/notSolved/: ArrayPartition.kt  FinalValueOfVariable.kt  FindTargetIndicesAfterSorting.kt  GoalParserInterpretation.kt  LinkedListCycle.kt  MergeSimilarItems.kt  MinimumMovesToSeatEveryone.kt  RemoveElement.kt  ScoreOfString.kt  SmallerNumbersThanCurrent.kt  SortThePeople.kt  ValidAnagram.kt  ValidParentheses.kt  ValidParenthesesOptimized.kt
docs/: package-list
docs/mohamed.arfa.problemsolving/-swapping-nodes-in-a-linked-list/: -swapping-nodes-in-a-linked-list.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+97 files in other folders)
